--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "lazysizes": "^5.1.2",
     "object-fit-images": "*",
     "gsap": "^3.0.2",
-    "image-map-resizer": "^1.0.10"
+    "image-map-resizer": "^1.0.10",
+    "select2": "^4.0.12"
   }
 }
