--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-uglify-es": "^2.0.0",
     "gulp-wait": "0.0.2",
     "node-sass": "^4.13.0",
+    "pixi.js": "^5.2.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
