--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
   },
   "homepage": "https://github.com/sonvh2510/01.ToolBuildHTML#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-async-to-generator": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/register": "^7.7.4",
-    "@babel/runtime": "^7.7.6",
-    "autoprefixer": "^9.7.3",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6",
+    "@babel/runtime": "^7.8.7",
+    "autoprefixer": "^9.7.4",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
     "browserify": "^16.5.0",
-    "core-js": "^3.4.8",
+    "core-js": "^3.6.4",
     "cowsay": "^1.4.0",
-    "css-declaration-sorter": "^4.0.1",
+    "css-declaration-sorter": "^5.1.2",
     "del": "^5.1.0",
     "fibers": "^4.0.2",
     "graceful-fs": "^4.2.3",
@@ -49,12 +49,18 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^2.0.0",
     "gulp-wait": "0.0.2",
-    "node-sass": "^4.13.0",
-    "pixi.js": "^5.2.0",
+    "node-sass": "^4.13.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0"
+    "fancybox": "^3.0.1",
+    "gsap": "^3.2.4",
+    "image-map-resizer": "^1.0.10",
+    "jquery": "^3.4.1",
+    "lazysizes": "^5.2.0",
+    "object-fit-images": "^3.2.4",
+    "pixi.js": "^5.2.1",
+    "swiper": "^5.3.6"
   }
 }
