--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -35,7 +35,7 @@
 		"indent_char": " ",
 		"indent_level": 0,
 		"indent_size": 4,
-		"indent_with_tabs": false,
+		"indent_with_tabs": true,
 		"jslint_happy": false,
 		"keep_array_indentation": false,
 		"keep_function_indentation": false,
