--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"cowsay": "^1.4.0",
 		"css-declaration-sorter": "^5.1.2",
 		"del": "^5.1.0",
+		"eslint": "^6.8.0",
 		"fibers": "^4.0.2",
 		"graceful-fs": "^4.2.3",
 		"gulp": "^4.0.2",
