--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "gulpfile.babel.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "gulp"
+		"start": "gulp",
+		"update": "ncu -u && npm install && npm audit fix",
+		"lint": "./node_modules/.bin/eslint"
 	},
 	"repository": {
 		"type": "git",
@@ -28,32 +30,36 @@
 			"@babel/preset-env"
 		],
 		"plugins": [
-			"@babel/plugin-proposal-class-properties",
+			"@babel/plugin-transform-classes",
 			"@babel/plugin-transform-async-to-generator"
 		]
 	},
 	"devDependencies": {
-		"@babel/core": "^7.8.7",
-		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/core": "^7.9.0",
 		"@babel/plugin-transform-async-to-generator": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.8.3",
-		"@babel/preset-env": "^7.8.7",
-		"@babel/register": "^7.8.6",
-		"@babel/runtime": "^7.8.7",
-		"autoprefixer": "^9.7.4",
+		"@babel/plugin-transform-classes": "^7.9.2",
+		"@babel/plugin-transform-runtime": "^7.9.0",
+		"@babel/preset-env": "^7.9.0",
+		"@babel/register": "^7.9.0",
+		"@babel/runtime": "^7.9.2",
+		"autoprefixer": "^9.7.5",
 		"babelify": "^10.0.0",
 		"browser-sync": "^2.26.7",
-		"browserify": "^16.5.0",
+		"browserify": "^16.5.1",
 		"core-js": "^3.6.4",
-		"cowsay": "^1.4.0",
 		"css-declaration-sorter": "^5.1.2",
 		"del": "^5.1.0",
 		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.1.0",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.0",
 		"fibers": "^4.0.2",
 		"graceful-fs": "^4.2.3",
 		"gulp": "^4.0.2",
 		"gulp-babel": "^8.0.0",
-		"gulp-clean-css": "^4.2.0",
+		"gulp-clean-css": "^4.3.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-plumber": "^1.2.1",
 		"gulp-postcss": "^8.0.0",
@@ -64,19 +70,23 @@
 		"gulp-strip-comments": "^2.5.2",
 		"gulp-uglify": "^3.0.2",
 		"gulp-uglify-es": "^2.0.0",
-		"gulp-wait": "0.0.2",
 		"node-sass": "^4.13.1",
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0"
 	},
 	"dependencies": {
 		"fancybox": "^3.0.1",
-		"gsap": "^3.2.4",
 		"image-map-resizer": "^1.0.10",
 		"jquery": "^3.4.1",
 		"lazysizes": "^5.2.0",
-		"object-fit-images": "^3.2.4",
 		"pixi.js": "^5.2.1",
 		"swiper": "^5.3.6"
+	},
+	"prettier": {
+		"trailingComma": "es5",
+		"tabWidth": 4,
+		"semi": false,
+		"singleQuote": true,
+		"useTabs": true
 	}
 }
