--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"gulp-uglify": "^3.0.2",
 		"gulp-uglify-es": "^2.0.0",
 		"node-sass": "^4.13.1",
+		"prettier": "2.0.4",
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0"
 	},
@@ -85,8 +86,9 @@
 	"prettier": {
 		"trailingComma": "es5",
 		"tabWidth": 4,
-		"semi": false,
+		"semi": true,
 		"singleQuote": true,
-		"useTabs": true
+		"useTabs": true,
+		"bracketSpacing": true
 	}
 }
